updated the copyright

--- a/src/main/webapp/WEB-INF/includes/footer.xhtml
+++ b/src/main/webapp/WEB-INF/includes/footer.xhtml
@@ -10,7 +10,7 @@
     <p:panel>
         <div class="flex justify-content-between flex-wrap">
             <div class="flex align-items-center justify-content-center h-4rem">
-                <p:outputLabel value="#{text['index.footer.author']}" escape="false" />       
+                <p:outputLabel value="© 2023 Nocodefunctions by Clément Levallois" escape="false" />       
             </div>
             <div class="flex align-items-center justify-content-center w-24rem h-4rem">
                 <h:form>
