renamed ActiveLocale bean to LocaleBean. This change impacts all web pages. Added tests on Locale and RemoteLocale

--- a/src/main/webapp/WEB-INF/includes/footer.xhtml
+++ b/src/main/webapp/WEB-INF/includes/footer.xhtml
@@ -15,8 +15,8 @@
             <div class="flex align-items-center justify-content-center w-24rem h-4rem">
                 <h:form>
                     <small></small>
-                    <h:selectOneMenu value="#{activeLocale.languageTag}" onchange="submit()">
-                        <f:selectItems value="#{activeLocale.available}" var="l"
+                    <h:selectOneMenu value="#{localeBean.languageTag}" onchange="submit()">
+                        <f:selectItems value="#{localeBean.availableLocales}" var="l"
                                        itemValue="#{l.toLanguageTag()}"
                                        itemLabel="#{l.getDisplayLanguage(l)} #{empty l.getDisplayCountry()?'':'('}#{l.getDisplayCountry(l)}#{empty l.getDisplayCountry()?'':')'}">
                         </f:selectItems>
