--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -41,6 +41,36 @@ body .ui-divider .ui-divider-content {
     margin-bottom: 20px;
     margin-top: 20px;
 }
+
+.redBackground .ui-button{
+    background-color: #f0352c;
+    background: #f0352c;
+    border: none; /* No border */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow to add luminosity */
+    transition: background-color 0.3s ease;
+    width: 250px;
+    min-width: 250px;
+    height: 10px;
+    min-height: 100px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.redBackground .ui-button.ui-state-hover{
+    background-color: #ff1f1f;
+    background: #ff1f1f;
+    border: none; /* No border */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow to add luminosity */
+    transition: background-color 0.3s ease;
+    width: 250px;
+    min-width: 250px;
+    height: 10px;
+    min-height: 100px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+
 h2 {
     /*    h2 tags are used in the app as a normal text, but enclosed in h2 for SEO referencing purposes
         For this reason the css is reworked to make h2 tags look like regular p tags.*/
@@ -155,5 +185,323 @@ h2 {
 @media screen and (max-width:500px){
     #hide-desktop {
         display: none !important;
+    }
+}
+
+/*
+Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
+Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this template
+*/
+/* 
+    Created on : 23 déc. 2024, 16:14:03
+    Author     : clevallois
+*/
+
+.glow-button {
+    border: none !important;
+    box-shadow: none !important;
+    position: relative !important;
+    background-image: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82) !important;
+    background-size: 300% 300% !important;
+
+    color: white;
+    font-weight: bold !important;
+    font-size: 16px !important;
+    padding: 12px 20px !important;
+    border-radius: 30px !important;
+    cursor: pointer !important;
+    animation: glowingGradient 6s ease infinite !important;
+    text-shadow: 0 0 10px #fff, 0 0 20px #ff4c4c, 0 0 30px #ff4c4c, 0 0 40px #ff4c4c !important;
+    transition: transform 0.2s, box-shadow 0.2s !important;
+}
+
+.glow-button:hover {
+    transform: scale(1.05) !important;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.8)  !important;
+}
+
+.glow-button:active {
+    transform: scale(0.98)  !important;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.8)  !important;
+}
+
+@keyframes glowingGradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
+}
+
+.navbar {
+    position: fixed; /* Changed from fixed to absolute */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    z-index: 9999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-left, .navbar-right {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.navbar-left img {
+    height: 40px;
+}
+
+.navbar-right a {
+    text-decoration: none;
+    color: #333;
+    font-weight: 300;
+    font-size: medium;
+    padding: 0.5rem 1rem;
+    transition: color 0.2s ease;
+}
+
+body {
+    margin: 0 !important;
+    min-height: 100vh;
+    padding-top: 60px; /* Add padding to account for fixed navbar height */
+}
+
+.navbar-right a:hover {
+    color: #007ad9;
+}
+
+.content {
+    padding: 2rem; /* Removed the navbar height compensation */
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.content p {
+    margin-bottom: 1rem;
+    line-height: 1.6;
+}
+
+.content h1 {
+    margin-bottom: 2rem;
+}
+
+.trigger {
+    display: inline-block;
+    margin: 20px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.trigger:hover {
+    background-color: #0056b3;
+}
+
+.input-container {
+    margin: 20px auto;
+    width: 300px;
+    text-align: center;
+    transition: all 0.3s ease;
+    border: 2px solid #ddd;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0.2);
+}
+
+.expandable-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    box-sizing: border-box;
+    transition: all 0.3s ease;
+}
+
+.expand-animation {
+    transform: scale(0.99);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    border-color: #007bff;
+}
+
+.expand-animation .expandable-input {
+    padding: 12px;
+    border-color: #007bff;
+}
+
+@keyframes blink-scale {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.98);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+@keyframes animatedgradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.email-field-alert {
+    animation: blink-scale 0.2s ease;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    border-color: #007bff;
+}
+
+/* styles.css */
+#scrollBanner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 1000;
+}
+
+.banner-visible {
+    transform: translateY(0) !important;
+}
+
+.logo-box {
+    width: 30px;
+    height: 30px;
+    margin-right: 7px;
+    margin-top: -4px;
+    vertical-align: middle;
+    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+    -webkit-animation: animatedgradient 6s ease infinite alternate;
+    animation: animatedgradient 6s ease infinite alternate;
+    background-size: 300% 300%;
+    -webkit-mask: url("#{request.contextPath}/images/icon-60x60.svg") no-repeat;
+    -webkit-mask-size: contain;
+    mask: url("#{request.contextPath}/images/icon-60x60.svg") no-repeat;
+    mask-size: contain;
+    display: inline-block;
+}
+
+.logo h1 {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    padding-left: 0;
+    padding-right: 21px;
+    line-height: 1.88;
+    color: #fff;
+    height: 34px;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    margin: 0;
+    left: 21px;
+    font-size: 21px;
+    top: 50%;
+    background: -webkit-linear-gradient(45deg, #680aca, #ff897e);
+    background: linear-gradient(60deg,#f79533,#f37055,#ef4e7b,#a166ab,#5073b8,#1098ad,#07b39b,#6fba82);
+    -webkit-animation: animatedgradient 6s ease infinite alternate;
+    animation: animatedgradient 6s ease infinite alternate;
+    background-size: 300% 300%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top:-3px;
+}
+
+@keyframes animatedgradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.dark-red-button:hover {
+    background-color: #a11212 !important; /* Darker red on hover */
+    transition: background-color 0.3s ease; /* Smooth transition effect */
+}
+
+.pricing-container .pricing-plan .pricing-badge {
+    padding: 5px 10px;
+    position: relative;
+    overflow: hidden;
+    background: #d61a1a;
+    display: inline-block;
+    border-radius: 12px;
+    font-size: 12px;
+    color: #fff; /* Ensure text is visible */
+}
+
+.pricing-container .pricing-plan .pricing-badge:before {
+    animation: badgeShimmer 2.5s infinite ease-out 1.8s;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.18) 25%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.18) 75%, rgba(255, 255, 255, 0) 100%);
+    content: "";
+    display: block;
+    height: 90px;
+    left: -60%;
+    position: absolute;
+    top: -150px;
+    transform: rotate(-25deg);
+    width: 200px;
+}
+
+@keyframes badgeShimmer {
+    0% {
+        left: -100%;
+        top: -150px;
+    }
+    50% {
+        left: 100%;
+        top: 150px;
+    }
+    100% {
+        left: 100%;
+        top: 150px;
     }
 }
